--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container">
             <div class="card">
                 <div class="ribbon">
-                    <div class="ribbon-text">Generic Heading</div>
+                    <div class="ribbon-text">SPORTIWORK</div>
                 </div>
                 <img src="https://picsum.photos/id/1050/1000" alt="img">
                 <div class="card-info">
@@ -189,7 +189,7 @@
             </div>            
             <div class="card">
                 <div class="ribbon">
-                    <div class="ribbon-text">Generic Heading</div>
+                    <div class="ribbon-text">RENDEZVOUS</div>
                 </div>
                 <img src="https://picsum.photos/id/1050/1000" alt="img">
                 <div class="card-info">
