--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="card">
                 <div class="ribbon">
-                    <div class="ribbon-text">Generic Heading</div>
+                    <div class="ribbon-text">BUSINESS CENTRIC</div>
                 </div>
                 <img src="https://picsum.photos/id/1050/1000" alt="img">
                 <div class="card-info">
