--- a/index.html
+++ b/index.html
@@ -209,29 +209,86 @@
     </div>
     <div class="uk-section uk-section-muted">
         <div class="uk-container">
-            <div class="uk-grid-small uk-child-width-1-4@s uk-flex-center uk-text-center" uk-grid>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body">Item 1</div>
+            <div class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex" style="background-image: url('./img/banner-one.png');">
+                <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    <h1 class="uk-text-capitalize" uk-parallax="opacity: 0,1; y: -100,0; scale: 2,1; end: 50vh + 50%;">Drop in and try our space today for free</h1>
+                        <div class="uk-margin-top uk-align-center uk-text-center" uk-parallax="opacity: 0,1; y: 100,0; scale: 0.5,1; end: 50vh + 50%;">
+                            <button class="custom-button">Book Now</button>
+                        </div>
                 </div>
-                <div class="uk-flex-last">
-                    <div class="uk-card uk-card-secondary uk-card-body">Item 2</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body">Item 3</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body">Item 4</div>
-                </div>
-                <div class="uk-flex-first">
-                    <div class="uk-card uk-card-primary uk-card-body">Item 5</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body">Item 6</div>
-                </div>
-            </div>            
+            </div>
         </div>
     </div>
     <div class="uk-section">
+        <div class="uk-container">
+            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-grid-column-collapse uk-grid-row-collapse" uk-grid="masonry: true">
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 250px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-seven.avif" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 216px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-two.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 250px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-three.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 220px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-four.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 200px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-five.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 220px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-six.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 220px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-9.avif" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle" style="height: 300px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/demo.webp" alt="">
+                        </div>
+                    </div>
+                </div>                
+                <div>
+                    <div class=" uk-flex uk-flex-center uk-flex-middle"style="height: 150px">
+                        <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                            <img class="uk-transition-scale-up uk-transition-opaque" src="./img/banner-8.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>         
+        </div>
+    </div>
+    <div class="uk-section uk-section-muted">
         <div class="uk-container">
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="center: true; autoplay: true;">
                 <ul class="uk-slider-items uk-grid-match uk-grid">                   
@@ -393,7 +450,7 @@
             </div>
         </div>
     </div>
-    <div class="uk-section uk-section-muted uk-padding-remove-bottom">
+    <div class="uk-section uk-padding-remove-bottom">
         <div class="uk-container">
             <div class="uk-width-1-1@s">
                 <div class="uk-child-width-1-4@m uk-grid-small uk-grid-match" uk-grid>
