--- a/index.html
+++ b/index.html
@@ -203,50 +203,43 @@
         </div>
       </div>
     </div>
-    <div class="section-padding">
-      <div class="section-bg"></div>
+    <div class="custom-section-bg p-5">
       <div class="container">
-          <div class="row">
-              <div class="col-md-7">
-                  <div class="contact-form">
-                      <h2 class="absolute-text">Appointment</h2>
-                      <form action="index.html">
-                          <div class="row">
-                              <div class="col-md-6">
-                                  <input type="text" placeholder="First Name*">
-                              </div>
-                              <div class="col-md-6">
-                                  <input type="text" placeholder="Last Name*">
-                              </div>
-                          </div>
-                          <div class="row">
-                              <div class="col-md-6">
-                                  <input type="tel" placeholder="Phone Number">
-                              </div>
-                              <div class="col-md-6">
-                                  <input type="date" placeholder="Date">
-                              </div>
-                          </div>
-                          <p><textarea name="message" id="message" cols="30" rows="10" placeholder="Observation"></textarea></p>
-                          <p><input type="submit" value="Make Appointment"></p>
-                      </form>
-                  </div>
-              </div>
-              <div class="col-md-5 custom-appoint-section">
-                  <div class="appointment-text">
-                      <h5>We eliminate the inconvinience of multiple visits.</h5>
-                      <ul class="list-unstyled">
-                          <li><i class="fas fa-shield-alt"></i>No Second Injection or Temporaries</li>
-                          <li><i class="fas fa-shield-alt"></i>No Unprofessional Doctors</li>
-                          <li><i class="fas fa-shield-alt"></i>No Poor Quality Products</li>
-                          <li><i class="fas fa-shield-alt"></i>No Student at Australian University</li>
-                      </ul>
-                      <a href="" class="boxed-btn">Learn More</a>
-                  </div>
-              </div>
+        <div class="row">
+          <div class="col-md-7 pt-4">
+            <div class="contact-form">
+                <h2 class="absolute-text">Appointment</h2>
+                <form action="index.html">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" placeholder="First Name*">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="text" placeholder="Last Name*">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="tel" placeholder="Phone Number">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="date" placeholder="Date">
+                        </div>
+                    </div>
+                    <p><textarea name="message" id="message" cols="10" rows="8" placeholder="Observation"></textarea></p>
+                    <p><input type="submit" value="Make Appointment"></p>
+                </form>
+            </div>
+        </div>
+          <div class="col-md-5">
+            <img src="./img/logo.webp" class="" alt="">
+            <div class="row">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15669.854476178134!2d76.9717074!3d10.9283089!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40c812a7d5394fdf!2sAIC%20RAISE%20Startup%20Incubation%20Center!5e0!3m2!1sen!2sin!4v1650959856699!5m2!1sen!2sin" width="600" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
+        </div>
       </div>
-  </div>
+    </div>
     <!-- <div class="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
