--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <title>AIC Raise</title>
-    <script src="./index.js"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="custom-banner-img">
@@ -168,26 +163,15 @@
     <div class="custom-price-section p-5">
       <div class="container">
         <div id="gallery" class="container-fluid">  
-          <img src="https://source.unsplash.com/1600x1200?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/1024x768?female,portrait" class="img-responsive">
-           <img src="https://source.unsplash.com/1366x768?female,portrait" class="img-responsive">
-          <video class="vid" controls>
-            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-            </source>
-          </video>
-          <img src="https://source.unsplash.com/1920x1080?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/640x360?female,portrait" class="img-responsive">
-        <img src="https://source.unsplash.com/320x640?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/1200x1600?female,portrait" class="card img-responsive">
-          <img src="https://source.unsplash.com/800x600?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/600x800?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/400x600?female,portrait" class="img-responsive">
-          <img src="https://source.unsplash.com/600x400?female,portrait" class="img-responsive">
-        <img src="https://source.unsplash.com/1100x1600?female,portrait" class="img-responsive">
-        <img src="https://source.unsplash.com/1600x1100?female,portrait" class="img-responsive">
-        <img src="https://source.unsplash.com/992x768?female,portrait" class="img-responsive">
-        <img src="https://source.unsplash.com/768x992?female,portrait" class="img-responsive">
-        
+          <img src="./img/img.webp" class="img-responsive">
+          <img src="./img/img1.webp" class="img-responsive">
+           <img src="./img/img3.webp" class="img-responsive">
+          <img src="./img/img4.webp" class="img-responsive">
+          <img src="./img/img5.webp" class="img-responsive">
+        <img src="./img/img6.webp" class="img-responsive">
+          <img src="./img/img7.webp" class="card img-responsive">
+          <img src="./img/img8.webp" class="img-responsive">
+          <img src="./img/img9.jpg" class="img-responsive">       
         </div>
         
         <div id="myModal" class="modal fade" role="dialog">
