--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <div class="custom-section-bg p-5">
         <div class="container">
             <h1 class="text-capitalize custom-title text-center p-1">your space to grow</h1>
-            <div class="row">
-              <div class="col-md-6 col-sm-12 custom-align-center">
+            <div class="row pt-4">
+              <div class="col-md-6 col-sm-12 custom-align-center p-5">
                   <h3 class="text-start pb-3">SPORTIWORK</h3>
                   <p class="">Feel spirited, enthusiastic, zesty and content whether you work collaboratively or solitarily, is our say at AIC RAISE. Go ahead and grab your favourite abode to make it happen. Embark on a fantastic journey establishing your workstation with us.</p>
               </div>
@@ -143,13 +143,13 @@
                 <div class="col-md-6 col-sm-12 custom-img-center">
                   <img src="./img/office.png" alt="" style="width: 100%;">
                 </div>
-                <div class="col-md-6 col-sm-12 custom-align-center">
+                <div class="col-md-6 col-sm-12 custom-align-center p-5">
                   <h3 class="text-start pb-3">RENDEZVOUS</h3>
                   <p class="">Find our meeting rooms well-furnished, spacious and airy with elegant décor that boots your energy and acts as a catalyst to enhance your working pace. A suitable place to host client meetings or team catch-up, where big ideas are born. </p>
                 </div>
             </div>
             <div class="row pt-5">
-                <div class="col-md-6 col-sm-12 custom-align-center">
+                <div class="col-md-6 col-sm-12 custom-align-center p-5">
                     <h3 class="text-start pb-3">BUSINESS CENTRIC</h3>
                     <p class="">Our workspaces located amidst the booming business vicinity gives you the advantage of a prime address of our workspace with enterprise-grade security, flexible contract terms, modern amenities and world-class design.</p>
                 </div>
