--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="custom-price-section">
       <div class="pricing-table">
         <div class="pricing-card">
           <h3 class="pricing-card-header">Virtual</h3>
