--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <div class="container">
         <div id="gallery" class="container-fluid">  
           <img src="./img/img.webp" class="img-responsive">
-          <img src="./img/img1.webp" class="img-responsive">
+          <!-- <img src="./img/img1.webp" class="img-responsive"> -->
            <img src="./img/img3.webp" class="img-responsive">
           <img src="./img/img4.webp" class="img-responsive">
           <img src="./img/img5.webp" class="img-responsive">
