--- a/index.html
+++ b/index.html
@@ -366,16 +366,22 @@
     <!-- gallery -->
     <div class="custom-price-section p-5">
       <div class="container">
-        <div id="gallery" class="container-fluid">  
-          <img src="./img/img.webp" class="img-responsive">
-          <!-- <img src="./img/img1.webp" class="img-responsive"> -->
-           <img src="./img/img3.webp" class="img-responsive">
-          <img src="./img/img4.webp" class="img-responsive">
-          <img src="./img/img5.webp" class="img-responsive">
-        <img src="./img/img6.webp" class="img-responsive">
-          <img src="./img/img7.webp" class="card img-responsive">
-          <img src="./img/img8.webp" class="img-responsive">
-          <img src="./img/img9.jpg" class="img-responsive">       
+        <div id="gallery" class="container-fluid">                       
+          <img src="./img/image (5).JPG" class="img-responsive">
+          <img src="./img/image (2).jpg" class="img-responsive">          
+          <img src="./img/image (4).JPG" class="img-responsive">
+          <img src="./img/image (10).JPG" class="img-responsive">
+          <img src="./img/image (13).jpg" class="img-responsive">
+          <img src="./img/image (6).JPG" class="img-responsive">
+          <img src="./img/image (7).JPG" class="card img-responsive">
+          <img src="./img/image (8).JPG" class="img-responsive">
+          <img src="./img/image (9).JPG" class="img-responsive">  
+          <img src="./img/image (11).JPG" class="img-responsive">
+          <img src="./img/image (3).jpg" class="img-responsive">
+          <img src="./img/image (12).JPG" class="img-responsive">     
+          <img src="./img/img6.webp" class="img-responsive"> 
+          <img src="./img/img7.webp" class="img-responsive"> 
+          <img src="./img/image (9).JPG" class="img-responsive"> 
         </div>
         
         <div id="myModal" class="modal fade" role="dialog">
