--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
             </div>
         </div>
     </div>
-    <div class="custom-price-section">
+    <div class="custom-price-section p-5">
+      <h1 class="text-capitalize custom-title text-center p-1">Prices of Co-Working Seats</h1>
       <div class="pricing-table">
         <div class="pricing-card">
           <h3 class="pricing-card-header">Virtual</h3>
@@ -365,6 +366,7 @@
     </div>
     <!-- gallery -->
     <div class="custom-price-section p-5">
+      <h1 class="text-capitalize custom-title text-center p-1">Gallery</h1>
       <div class="container">
         <div id="gallery" class="container-fluid">                       
           <img src="./img/image (5).JPG" class="img-responsive">
@@ -398,6 +400,7 @@
       </div>
     </div>
     <div class="custom-section-bg p-5" style="padding-bottom: 0px!important;">
+      <h1 class="text-capitalize custom-title text-center p-1">Make Schedule</h1>
       <div class="container">
         <div class="row">
           <div class="col-md-7 pt-4">
