--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
     </div>
     <div class="custom-price-section p-5">
-      <h1 class="text-capitalize custom-title text-center p-1">Prices of Co-Working Seats</h1>
+      <h1 class="text-capitalize custom-title text-center p-1">Prices of Co-Working Seats Plan</h1>
       <div class="pricing-table">
         <div class="pricing-card">
           <h3 class="pricing-card-header">Virtual</h3>
